- will now look to environment for default api version (`export FBUTILS_FB_API_VERSION=v2.8`)
- will now look to environment for debug (`export FBUTILS_DEBUG=True`)
- fixed typo/rename `fb_grap_api_version` > `fb_api_version`
- redid how urls are generated for clarity
- updated tests
- made interactive tests public
- now supports appsecret_proof
- pyramid integration namespace change -- now `fbutils.`.  this is to ensure things break and people upgrade correctly
- set a custom prefix for pyramid paster integration via `fbutils.prefix`

"""
https://developers.facebook.com/docs/apps/changelog
	[Oauth Access Token] Format - The response format of https://www.facebook.com/v2.3/oauth/access_token returned when you exchange a code for an access_token now return valid JSON instead of being URL encoded. The new format of this response is {"access_token": {TOKEN}, "token_type":{TYPE}, "expires_in":{TIME}}. We made this update to be compliant with section 5.1 of RFC 6749.
"""


0.40.4 (2017-01-11)
------------------
- packaging fix
- flake8
- version number now in library itself

0.40.3 (2017-01-11)
------------------
- support for non-authenticated queries (such as opengraph lookups)
- api_proxy now supports `get_data` kwarg, which is passed into the `requests` library as `params`.
- FacebookHub now accepts an `unauthenticated_hub` argument
- cleaned up some whitespace
- stashing last-repsonse for later inspection
- supporting inspection of `last_response_ratelimited`

0.40.2 (2015-10-15)
------------------
- aliased `request.registry.settings` to `registry_settings` on setup.

0.40.1 (2015-10-15)
------------------
- added auth_type to FacebookApiUrls.oauth_token__url_dialog
- fixed how auth_type is appended to urls
- BREAKING CHANGE FacebookApiUrls.oauth_code__url_dialog now expects `redirect_uri, scope` NOT `scope, redirect_uri`.  this is the only place in the code where `scope` preceded `redirect_uri`.


0.30.3 (2015-10-08)
------------------